--- a/Второе задание/zd4.html
+++ b/Второе задание/zd4.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="zd4.css">
 </head>
 <body>
-    <div class="head"><header align="center"> Голова </header></div> 
-    <div class="one"><img width="480" height="70" src="2.jpg" alt="вода"></div></div>
-    <div class="two"><img width="480" height="70" src="1.jpg" alt="облака"></div></div>
+    <header align="center">  
+    <div class="one"><img width="300" height="70" src="2.jpg" alt="небо"></div></div>
+    <div class="two"><img width="300" height="70" src="1.jpg" alt="облака"></div></div>
+    </header>
     <section>
     <div class="blok">Равным образом постоянный количественный рост и сфера нашей активности играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям. Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия.
             Идейные соображения высшего порядка, а также укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции позволяет оценить значение модели развития.
@@ -21,6 +22,6 @@
             Повседневная практика показывает, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки направлений прогрессивного развития.
         </div>
     </section>
-    <footer class="futer">Первоя строка <br> Вторая строка <br> Третья строка. <sup>®</sup></footer>
+    <footer class="futer"><p>Первоя строка <br> Вторая строка <br> Третья строка. <sup>®</sup></p></footer>
 </body>
 </html>
