--- a/Третье задание/index.html
+++ b/Третье задание/index.html
@@ -75,7 +75,7 @@
                 
                     <form>
                         <input class="inlog" type="text" name="full Name" placeholder="Full Name" required>
-                        <input class="inlog" type="email" name="email Address" placeholder="Email Address" required>
+                        <input class="inlog2" type="email" name="email Address" placeholder="Email Address" required>
                         <textarea class="mess" placeholder="Message" cols="40" rows="3"></textarea></p>
                         <div class="text">
                             <input type="checkbox" name="subscribe"> Subscribe Newsletter
