--- a/Третье задание/index.html
+++ b/Третье задание/index.html
@@ -76,11 +76,12 @@
                     <form>
                         <input class="inlog" type="text" name="full Name" placeholder="Full Name" required>
                         <input class="inlog2" type="email" name="email Address" placeholder="Email Address" required>
-                        <textarea class="mess" placeholder="Message" cols="40" rows="3"></textarea></p>
+                        <textarea class="mess" placeholder="Message" cols="40" rows="3"></textarea>
                         <div class="text">
-                            <input type="checkbox" name="subscribe"> Subscribe Newsletter
-                        </div>
-                        <a href="#"><input class="sen" type="submit" value="Send"></a>                        
+                            <div class=zaparil><input type="checkbox" name="subscribe"> Subscribe Newsletter</div>
+                        
+                            <a href="#"><input class="sen" type="submit" value="Send"></a> 
+                        </div>                       
                     </form>
                 </div>  
             </div>
