--- a/Третье задание/index.html
+++ b/Третье задание/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Новый проект</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./effect.css">
+    <link rel="stylesheet" href="./all.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -70,12 +72,54 @@
             <h3>Showcase your work like a pro.</h3>
             <p> Contact me if you like my work</p>
             <div class="flex2"> 
-                <div id="activate"><img class="hov" src="./images/pikture1.png" alt="bike"></div>
-                <div><img class="hov" src="./images/pikture2.png" alt="giarl"></div>
-                <div><img class="hov" src="./images/pikture3.png" alt="smile"></div>
-                <div><img class="hov" src="./images/pikture4.png" alt="cup"></div>
-                <div><img class="hov" src="./images/pikture5.png" alt="bike"></div>
-                <div><img class="hov" src="./images/pikture6.png" alt="bike"></div>
+
+                <div class="pic">
+                    <img class="pic-image" src="./images/pikture1.png" alt="bike">
+                    <span class="pic-caption bottom-to-top">
+                        <div class="lupa"><img src="./images/icon1.png" alt="lupa"></div>
+                        <div class="nepon"><img src="./images/icon2.png" alt="????"></div>                        
+                    </span>
+                </div>
+
+                <div class="pic">
+                    <img class="pic-image" src="./images/pikture2.png" alt="giarl">                    
+                    <span class="pic-caption bottom-to-top">
+                        <div class="lupa"><img src="./images/icon1.png" alt="lupa"></div>
+                        <div class="nepon"><img src="./images/icon2.png" alt="????"></div>   
+                    </span>
+                </div>
+
+                <div class="pic">
+                    <img class="pic-image" src="./images/pikture3.png" alt="smile">                   
+                    <span class="pic-caption bottom-to-top">
+                        <div class="lupa"><img src="./images/icon1.png" alt="lupa"></div>
+                        <div class="nepon"><img src="./images/icon2.png" alt="????"></div>   
+                    </span>
+                </div>
+
+                <div class="pic">
+                    <img class="pic-image" src="./images/pikture4.png" alt="cup">                    
+                    <span class="pic-caption bottom-to-top">
+                        <div class="lupa"><img src="./images/icon1.png" alt="lupa"></div>
+                        <div class="nepon"><img src="./images/icon2.png" alt="????"></div>   
+                    </span>
+                </div>
+
+                <div class="pic">
+                    <img class="pic-image" src="./images/pikture5.png" alt="bike">                   
+                    <span class="pic-caption bottom-to-top">
+                        <div class="lupa"><img src="./images/icon1.png" alt="lupa"></div>
+                        <div class="nepon"><img src="./images/icon2.png" alt="????"></div>   
+                    </span>
+                </div>
+                <div class="pic">
+                    <img class="pic-image" src="./images/pikture6.png" alt="bike">                   
+                    <span class="pic-caption bottom-to-top">
+                        <div class="lupa"><img src="./images/icon1.png" alt="lupa"></div>
+                        <div class="nepon"><img src="./images/icon2.png" alt="????"></div>   
+                    </span>
+                </div>
+
             </div>
         </section>
 
@@ -115,5 +159,8 @@
     
 
     </div>
+
+    <script src="./all.js"></script>
+
 </body>
 </html>
