--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -32,18 +32,114 @@
             <a href="#">START NOW</a>
         </section>
         <section class="container3">
-            <h4>Perfect for Designers & Developers</h4>>
-            <p>We are the unique set-up, that is ready to challenge and knock out such a global problem as unemployment. Our company gladly helps those, who are ready to learn, to develop and to gain new experience. company unifies people all over the world. Everything we do, we do it for YOU - totally gratuitously and with great enjoyment. We work so that you could work!</p>
-            <div><img src="./image/kvad1.png" alt="men"><div class="text"><h4>User experience</h4><p>Update your online business experience to 2017 standards. Encrease your earnings.</p></div></div>
-            <div><img src="./image/kvad2.png" alt="fon">  
-                <div class="krug">
-                <img  src="./image/kvad2-1.png." alt="figura">
-                </div>
+            <h4 class="zag3">Perfect for Designers & Developers</h4>>
+            <p class="text3">We are the unique set-up, that is ready to challenge and knock out such a global problem as unemployment. Our company gladly helps those, who are ready to learn, to develop and to gain new experience. company unifies people all over the world. Everything we do, we do it for YOU - totally gratuitously and with great enjoyment. We work so that you could work!</p>
+            <div class="kvad">
+                <img src="./image/kvad1.png" alt="men">
+                <h4 class="zag">User experience</h4>
+                <p class="text">Update your online business experience to 2017 standards. Encrease your earnings.</p>                
+            </div>
+            <div class="kvad2">
+                <img  src="./image/kvad2-1.png." alt="figura"> 
+                <div><h4 class="zag">Social Media</h4>
+                <p class="text">Add as many language packs as you want, to showcase your website across the entire globe.</p></div>               
+            </div>
+            <div class="kvad">
+                <img src="./image/kvad3.png" alt="men">
+                <h4 class="zag">Branding</h4>
+                <p class="text">Add as many language packs as you want, to showcase your website across the entire globe.</p>                  
+            </div>                 
+        </section>
+
+        <section class="container4">
+            <div class="item">
+                <span>History</span>
+                <i></i>
+                <p>Add as many language packs as you want, to showcase your website across the entire globe.</p>
+            </div>
+            <div class="item">
+                <img src="./image/image1.png" alt="image1" >
+            </div>
+            <div class="item">
+                <span>Who we are</span>
+                <i></i>
+                <p>Add as many language packs as you want, to showcase your website across the entire globe.</p> 
+            </div>
+            <div class="item">
+                <img src="./image/image2.png" alt="image2">
+            </div>
+            <div class="item">
+                <span>What we do</span>
+                <i></i>
+                <p>Add as many language packs as you want, to showcase your website across the entire globe.</p> 
             
             </div>
-            <div><img src="./image/kvad3.png" alt="men"></div>                      
+            <div class="item6">
+                <span>Goal</span>
+                <i></i>
+                <p>Add as many language packs as you want, to showcase your website across the entire globe.</p> 
+            </div>
+            <div class="item7">
+                <span>Awards</span>
+                <i></i>
+                <p>Add as many language packs as you want, to showcase your website across the entire globe.</p> 
+            </div>            
+        </section>
+
+        <section class="container7">
+            <h2>Latest News</h2>
+            <div class="grids">
+
+                <div class="item1">
+                    <h5>Wordpress</h5>
+                    <span>Top 10 Most Popular Premium WordPress Themes of 2017</span>
+                    <div>
+                        <p>MAY 17, 2017 BY<p style="color:#8a6f28"> NICOLA MIHAITA</p> </p>
+                    </div>
+                </div>
+
+                <div class="item2">
+                    <div class="item22">                        
+                        <h5>Wordpress</h5>
+                    </div>                    
+                    <p>Add as many language packs as you want, to showcase your</p>
+                </div>
+
+                <div class="item3">
+                    <div>                        
+                        <h5>creative</h5>
+                        <h5>seo</h5>                             
+                    </div>                                    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
+                </div>
+
+                <div class="item4">
+                    <div>                        
+                        <h5>apps</h5> 
+                    </div>                   
+                    <p>Add as many language packs as you want, to showcase your </p>
+                </div>
+
+                <div class="item5">
+                    <div>                    
+                        <h5>seo</h5>      
+                    </div>                
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                </div>
+
+            </div>
+            <div class="knopka">
+                <p class="niz">Read more</p>
+            </div>
         </section>
     </div>
     
 </body>
 </html>
+
+<div class="text"></div>
+
+
+<div class="krug">
+    <img  src="./image/kvad2-1.png." alt="figura">
+</div>           <img class="krug" src="./image/kvad2-1.png." alt="figura">
