--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -34,21 +34,31 @@
         <section class="container3">
             <h4 class="zag3">Perfect for Designers & Developers</h4>>
             <p class="text3">We are the unique set-up, that is ready to challenge and knock out such a global problem as unemployment. Our company gladly helps those, who are ready to learn, to develop and to gain new experience. company unifies people all over the world. Everything we do, we do it for YOU - totally gratuitously and with great enjoyment. We work so that you could work!</p>
-            <div class="kvad">
-                <img src="./image/kvad1.png" alt="men">
-                <h4 class="zag">User experience</h4>
-                <p class="text">Update your online business experience to 2017 standards. Encrease your earnings.</p>                
-            </div>
-            <div class="kvad2">
-                <img  src="./image/kvad2-1.png." alt="figura"> 
-                <div><h4 class="zag">Social Media</h4>
-                <p class="text">Add as many language packs as you want, to showcase your website across the entire globe.</p></div>               
-            </div>
-            <div class="kvad">
-                <img src="./image/kvad3.png" alt="men">
-                <h4 class="zag">Branding</h4>
-                <p class="text">Add as many language packs as you want, to showcase your website across the entire globe.</p>                  
-            </div>                 
+            <div class="flexkul">
+
+                <div class="kvad">
+                    <img src="./image/kvad1.png" alt="men">
+                    <h4 class="zag">User experience</h4>
+                    <p class="text">Update your online business experience to 2017 standards. Encrease your earnings.</p>                
+                </div>
+                
+                <div class="kvad2">
+                    <div class="kvad21">
+                        <img  src="./image/kvad2-1.png." alt="figura"> 
+                    </div>  
+                    <div>
+                        <h4 class="zag">Social Media</h4>
+                        <p class="text">Add as many language packs as you want, to showcase your website across the entire globe.</p>
+                    </div>               
+                </div>
+
+                <div class="kvad">
+                    <img src="./image/kvad3.png" alt="men">
+                    <h4 class="zag">Branding</h4>
+                    <p class="text">Add as many language packs as you want, to showcase your website across the entire globe.</p>                  
+                </div>  
+
+            </div>                       
         </section>
 
         <section class="container4">
