--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -44,7 +44,9 @@
                 
                 <div class="kvad2">
                     <div class="kvad21">
-                        <img  src="./image/kvad2-1.png." alt="figura"> 
+                        <span>
+                            <img  src="./image/kvad2-1.png." alt="figura"> 
+                        </span>
                     </div>  
                     <div>
                         <h4 class="zag">Social Media</h4>
