--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300|Nunito:300,400,700|Open+Sans:400,600|Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
     <link real="stylesheet" href="./fonts/trajanpro.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/all.css">
 </head>
 <body>
     <div class="wrapper">
@@ -98,6 +100,89 @@
             </div>            
         </section>
 
+        <section class="container5">
+            <div class="container-fluid">
+                <div class="row justify-content-start">
+                    <div class="left_content col-xl-7-right:auto">
+                        <img class="ramka" src="./image/phone.png" alt="ramka">
+                        <div class="row">
+                            <div class="left_fon col-xl-9">
+                                <img class="planshet" src="./image/planshet.png" alt="fon">
+                            </div>
+                            <div class="phone col-xl-3 justify-content-start">
+                                <div class="bel">
+                                    <img class="verx_phone" src="./image/verx_phone.png" alt="verx">
+                                    <div class="shadow-lg mb-5 bg-white rounded"><img  class="center_phone" src="./image/mobile.png" alt="center"></div>
+                                    <p class="text1">Starting a Creative Firm in the<br> 
+                                        Age of Digital Marketing</p>
+                                    <span class="text">100 min</span>
+                                    <div class="linia">   
+                                        <span class="line"></span>
+                                        <span class="line2"></span>
+                                    </div>     
+                                    <p class="text0">pause</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right_content col-xl-3 offset-xl-1">
+                        <h4>Projects</h4>
+                        <p>Starting a Creative Firm in the 
+                            Age of Digital Marketing.</p>
+                            <div class="row">
+                                <div class="right_icon col-xl-2">
+                                    <i class="fas fa-microphone-alt"></i>
+                                    <i class="fas fa-headphones-alt"></i>
+                                    <i class="fas fa-water"></i>
+                                </div>
+                                <div class="right_text col-xl-9">
+                                    <span>Voice Control</span>
+                                    <p>Intrinsicly formulate scalable web services before fully researched methodologies.</p>
+                                    <span>Music Player</span>
+                                    <p>Intrinsicly formulate scalable web services before fully researched methodologies.</p>
+                                    <span>Water Resistant</span>
+                                    <p>Intrinsicly formulate scalable web services before fully researched methodologies.</p>
+                                    <span class="knopka"><a href="#">view more</a></span>
+                                </div>
+                            </div>                                      
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container6">
+            <div class="container">
+                <div class="row">
+                    <div class="verx_content col-xl-12">
+                        <h4>Affordable Prices</h4>
+                    </div>
+                    <div class="center_content col-xl-4">
+                        <span class="bax"><span class="dollar">$</span>59</span>
+                        <h5>Single License</h5>
+                        <p>1 theme included<br>
+                        1 year of theme updates & support<br>
+                        20% off future purchases</p>
+                        <div class="knopka">view</div>
+                    </div>
+                    <div class="center_content col-xl-4">
+                        <span class="bax"><span class="dollar">$</span>199</span>
+                        <h5>Single License</h5>
+                        <p>All themes included<br>
+                        1 year of theme updates & support<br>
+                        Access all new themes</p>
+                        <div class="knopka">Sign Up today</div>
+                    </div>
+                    <div class="center_content col-xl-4">
+                        <span class="bax"><span class="dollar">$</span>399</span>
+                        <h5>Single License</h5>
+                        <p>All themes included<br>
+                        Unlimited theme updates & Support<br>
+                        Access all new themes</p>
+                        <div class="knopka">Sign Up today</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="container7">
             <h2>Latest News</h2>
             <div class="grids">
@@ -144,14 +229,52 @@
                 <p class="niz">Read more</p>
             </div>
         </section>
+        <section class="container8">
+            <div class="container"> <!--bootstrsp class-->
+                <div class="row">
+                    <div class="left_content col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
+                        <h4>We’ve got you covered.</h4>
+                        <p>Intuitive drag and drop Page Builder. Stunning themes. <span class="in_weight">Over 100 Elements.</span> Creating your beautiful website has never been easier.</p>
+                    </div>
+                    <div class="left_icons col-xl-1 col-lg-1 col-md-1 col-sm-3 col-3">
+                        <i class="fas fa-pager"></i>
+                        <i class="fas fa-crown"></i>
+                        <i class="fas fa-headset"></i>
+                    </div>
+                    <div class="right_text col-xl-3 col-lg-3 col-md-5 col-sm-9 col-9">
+                        <span>Stunning Page Builder</span>
+                        <p>Setup pages and content like a PRO. Coding is not required and a handy documentation is included.</p>
+                        <span>Featurewise Complete</span>
+                        <p>Without a doubt, Kallyas is one of the most complete WordPress themes on the market, being packed with all the goodies and sweet gems.</p>
+                        <span>Rescue support</span>
+                        <p>In time, gathering awesome feedback from our loyal customers, Kallyas became a mature, stable and future-proof project.</p>
+                    </div>
+                    <div class="left_icons col-xl-1 col-lg-1 col-md-1 col-sm-3 col-3">
+                        <i class="fas fa-trophy"></i>
+                        <i class="fas fa-user-astronaut"></i>
+                        <i class="fas fa-shopping-bag"></i>
+                    </div>
+                    <div class="right_text col-xl-3 col-lg-3 col-md-5 col-sm-9 col-9">
+                        <span>Iconic Awarded Design</span>
+                        <p>This design is featured across the marketplaces and awarded for it's looks. Walkthrough and enjoy the visuals.</p>
+                        <span>Mature project</span>
+                        <p>In time, gathering awesome feedback from our loyal customers, Kallyas became a mature, stable and future-proof project.</p>
+                        <span>E-Commerce Ready</span>
+                        <p>In time, gathering awesome feedback from our loyal customers, Kallyas became a mature, stable and future-proof project.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
-    
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="./js/all.js"></script> 
 </body>
 </html>
 
-<div class="text"></div>
 
 
-<div class="krug">
-    <img  src="./image/kvad2-1.png." alt="figura">
-</div>           <img class="krug" src="./image/kvad2-1.png." alt="figura">
+offset-xl-8
