--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -103,13 +103,13 @@
         <section class="container5">
             <div class="container-fluid">
                 <div class="row justify-content-start">
-                    <div class="left_content col-xl-7-right:auto">
+                    <div class="left_content col-xl-7-right:auto col-lg-12-right:auto col-md-12-right:auto col-sm-12-right:auto col-right:auto">
                         <img class="ramka" src="./image/phone.png" alt="ramka">
                         <div class="row">
-                            <div class="left_fon col-xl-9">
+                            <div class="left_fon col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9">
                                 <img class="planshet" src="./image/planshet.png" alt="fon">
                             </div>
-                            <div class="phone col-xl-3 justify-content-start">
+                            <div class="phone col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 justify-content-start">
                                 <div class="bel">
                                     <img class="verx_phone" src="./image/verx_phone.png" alt="verx">
                                     <div class="shadow-lg mb-5 bg-white rounded"><img  class="center_phone" src="./image/mobile.png" alt="center"></div>
@@ -125,24 +125,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="right_content col-xl-3 offset-xl-1">
+                    <div class="right_content col-xl-3 offset-xl-1 col-lg-10 col-md-10 col-sm-10 col-10" >
                         <h4>Projects</h4>
-                        <p>Starting a Creative Firm in the 
+                        <p class="ura">Starting a Creative Firm in the 
                             Age of Digital Marketing.</p>
                             <div class="row">
-                                <div class="right_icon col-xl-2">
+                                <div class="right_icon col-xl-2 col-lg-1 col-md-1 col-sm-2 col-2">
                                     <i class="fas fa-microphone-alt"></i>
-                                    <i class="fas fa-headphones-alt"></i>
-                                    <i class="fas fa-water"></i>
+                                    <i  class="fas fa-headphones-alt" ></i>
+                                    <i  class="fas fa-water"></i>
                                 </div>
-                                <div class="right_text col-xl-9">
-                                    <span>Voice Control</span>
-                                    <p>Intrinsicly formulate scalable web services before fully researched methodologies.</p>
-                                    <span>Music Player</span>
-                                    <p>Intrinsicly formulate scalable web services before fully researched methodologies.</p>
-                                    <span>Water Resistant</span>
-                                    <p>Intrinsicly formulate scalable web services before fully researched methodologies.</p>
-                                    <span class="knopka"><a href="#">view more</a></span>
+                                <div class="right_text col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9">
+                                    <span >Voice Control</span>
+                                    <p >Intrinsicly formulate scalable web services before fully researched methodologies.</p>
+                                    <span >Music Player</span>
+                                    <p >Intrinsicly formulate scalable web services before fully researched methodologies.</p>
+                                    <span >Water Resistant</span>
+                                    <p >Intrinsicly formulate scalable web services before fully researched methodologies.</p>
+                                    <span  class="knopka"><a href="#">view more</a></span>
                                 </div>
                             </div>                                      
                     </div>
@@ -152,18 +152,18 @@
         <section class="container6">
             <div class="container">
                 <div class="row">
-                    <div class="verx_content col-xl-12">
+                    <div class="verx_content col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <h4>Affordable Prices</h4>
                     </div>
-                    <div class="center_content col-xl-4">
+                    <div class="center_content col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
                         <span class="bax"><span class="dollar">$</span>59</span>
                         <h5>Single License</h5>
-                        <p>1 theme included<br>
+                        <p class="knopka2">1 theme included<br>
                         1 year of theme updates & support<br>
                         20% off future purchases</p>
                         <div class="knopka">view</div>
                     </div>
-                    <div class="center_content col-xl-4">
+                    <div class="center_content col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
                         <span class="bax"><span class="dollar">$</span>199</span>
                         <h5>Single License</h5>
                         <p>All themes included<br>
@@ -171,7 +171,7 @@
                         Access all new themes</p>
                         <div class="knopka">Sign Up today</div>
                     </div>
-                    <div class="center_content col-xl-4">
+                    <div class="center_content col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
                         <span class="bax"><span class="dollar">$</span>399</span>
                         <h5>Single License</h5>
                         <p>All themes included<br>
