--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -103,27 +103,16 @@
         <section class="container5">
             <div class="container-fluid">
                 <div class="row justify-content-start">
-                    <div class="left_content col-xl-7-right:auto col-lg-12-right:auto col-md-12-right:auto col-sm-12-right:auto col-right:auto">
-                        <img class="ramka" src="./image/phone.png" alt="ramka">
-                        <div class="row">
-                            <div class="left_fon col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9">
-                                <img class="planshet" src="./image/planshet.png" alt="fon">
-                            </div>
-                            <div class="phone col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 justify-content-start">
-                                <div class="bel">
-                                    <img class="verx_phone" src="./image/verx_phone.png" alt="verx">
-                                    <div class="shadow-lg mb-5 bg-white rounded"><img  class="center_phone" src="./image/mobile.png" alt="center"></div>
-                                    <p class="text1">Starting a Creative Firm in the<br> 
-                                        Age of Digital Marketing</p>
-                                    <span class="text">100 min</span>
-                                    <div class="linia">   
-                                        <span class="line"></span>
-                                        <span class="line2"></span>
-                                    </div>     
-                                    <p class="text0">pause</span>
+                    <div class="ramka" class="left_content col-xl-7-right:auto col-lg-12-right:auto col-md-12-right:auto col-sm-12-right:auto col-right:auto">
+                        
+                            <div class="row">
+                                <div class="left_fon col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 ">
+                                    <img class="planshet" src="./image/planshet.png" alt="fon">
+                                </div>
+                                <div class="phone col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 justify-content-start">
+                                    <img class="mobile2" src="./image/mobile2.png." alt="mobile">                                    
                                 </div>
                             </div>
-                        </div>
                     </div>
                     <div class="right_content col-xl-3 offset-xl-1 col-lg-10 col-md-10 col-sm-10 col-10" >
                         <h4>Projects</h4>
