--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -105,12 +105,12 @@
                 <div class="row justify-content-start">
                     <div class="ramka" class="left_content col-xl-7-right:auto col-lg-12-right:auto col-md-12-right:auto col-sm-12-right:auto col-right:auto">
                         
-                            <div class="row">
-                                <div class="left_fon col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 ">
+                            <div class="row" class="fon5">
+                                <div   class="left_fon col-xl-9- col-lg-9 col-md-9 col-sm-9 col-9 ">
                                     <img class="planshet" src="./image/planshet.png" alt="fon">
                                 </div>
-                                <div class="phone col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 justify-content-start">
-                                    <img class="mobile2" src="./image/mobile2.png." alt="mobile">                                    
+                                <div class="phone2  class=phone col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 justify-content-start">
+                                   <div class="nuje"> <img class="mobile2" src="./image/mobile2.png." alt="mobile" >  </div>                                  
                                 </div>
                             </div>
                     </div>
