--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -254,7 +254,64 @@
                 </div>
             </div>
         </section>
-
+        <section class="container11">
+            <div class="blok11">
+                <h3>Get in Touch With Us.</h3>
+                <p>Marketing to mobile-first users has arrived and must be taken seriously.</p>
+                <div class="knopka">
+                    <span>Let’s do it</span>
+                </div>
+            </div>
+        </section>
+        <section class="container12">
+            <div class="container">
+                <div class="row">
+                    <div class="left_content col-xl-4 col-lg-4 col-md-3 col-sm-12 col-12">
+                        <h4>hogash studios</h4>
+                        <p>Text of the printing and typesetting industry. Lorem Ipsum has been the indus try's standard dummy text ever  when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="flexbro">
+                            <div>
+                                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                                <a href="#"><i class="fas fa-headset"></i></a>
+                                <a href="#"><i class="fab fa-invision"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="center_content offset-xl-2 offset-lg-2 offset-md-1 col-xl-2  col-lg-2 col-md-3 col-sm-4 col-4">
+                        <h4>Services</h4>
+                        <p>Web Design</p>
+                        <p>Development</p>
+                        <p>Graphic Design</p>
+                        <p>Illustration</p>
+                        <p>Branding</p>
+                    </div>
+                    <div class="center_content col-xl-2 col-lg-2 col-md-3 col-sm-4 col-4">
+                        <h4>Company</h4>
+                        <p>About Us</p>
+                        <p>Knowledgae base</p>
+                        <p>Story</p>
+                        <p>Terms</p>
+                        <p>Contact Us</p>
+                    </div>     
+                    <div class="center_content col-xl-2 col-lg-2 col-md-2 col-sm-4 col-4">
+                        <h4>Links</h4>
+                        <p>Company</p>
+                        <p>Services</p>
+                        <p>Products</p>
+                        <p>Blog</p>
+                        <p>Portfolio</p>
+                    </div>    
+                    <div class="center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <div class="line"></div>
+                    </div>
+                    <div class="center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <p class="text_kr">Made with Love by <span class="text_cvet">hogash.com</span></p> 
+                    </div>
+                </div>               
+            </div>
+            
+        </section>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -266,4 +323,3 @@
 
 
 
-offset-xl-8
