--- a/Пятое задание/index.html
+++ b/Пятое задание/index.html
@@ -10,6 +10,7 @@
     <link real="stylesheet" href="./fonts/trajanpro.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/animate.css">
 </head>
 <body>
     <div class="wrapper">
@@ -145,7 +146,7 @@
                         <h4>Affordable Prices</h4>
                     </div>
                     <div class="center_content col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
-                        <span class="bax"><span class="dollar">$</span>59</span>
+                        <span  class="bax wow bounceIn" data-wow-iteration="infinite"  data-wow-duration="2s"><span class="dollar">$</span>59</span>
                         <h5>Single License</h5>
                         <p class="knopka2">1 theme included<br>
                         1 year of theme updates & support<br>
@@ -153,7 +154,7 @@
                         <div class="knopka">view</div>
                     </div>
                     <div class="center_content col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
-                        <span class="bax"><span class="dollar">$</span>199</span>
+                        <span class="bax wow bounceIn" data-wow-iteration="infinite" data-wow-duration="2s"><span class="dollar">$</span>199</span>
                         <h5>Single License</h5>
                         <p>All themes included<br>
                         1 year of theme updates & support<br>
@@ -161,7 +162,7 @@
                         <div class="knopka">Sign Up today</div>
                     </div>
                     <div class="center_content col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
-                        <span class="bax"><span class="dollar">$</span>399</span>
+                        <span class="bax wow bounceIn" data-wow-iteration="infinite" data-wow-duration="2s"><span class="dollar">$</span>399</span>
                         <h5>Single License</h5>
                         <p>All themes included<br>
                         Unlimited theme updates & Support<br>
@@ -221,16 +222,16 @@
         <section class="container8">
             <div class="container"> <!--bootstrsp class-->
                 <div class="row">
-                    <div class="left_content col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
+                    <div class="left_content col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 ">
                         <h4>We’ve got you covered.</h4>
                         <p>Intuitive drag and drop Page Builder. Stunning themes. <span class="in_weight">Over 100 Elements.</span> Creating your beautiful website has never been easier.</p>
                     </div>
-                    <div class="left_icons col-xl-1 col-lg-1 col-md-1 col-sm-3 col-3">
+                    <div class="left_icons col-xl-1 col-lg-1 col-md-1 col-sm-3 col-3 wow flip"   data-wow-duration="2s">
                         <i class="fas fa-pager"></i>
                         <i class="fas fa-crown"></i>
                         <i class="fas fa-headset"></i>
                     </div>
-                    <div class="right_text col-xl-3 col-lg-3 col-md-5 col-sm-9 col-9">
+                    <div class="right_text col-xl-3 col-lg-3 col-md-5 col-sm-9 col-9 wow fadeInLeft"   data-wow-duration="2s">
                         <span>Stunning Page Builder</span>
                         <p>Setup pages and content like a PRO. Coding is not required and a handy documentation is included.</p>
                         <span>Featurewise Complete</span>
@@ -238,12 +239,12 @@
                         <span>Rescue support</span>
                         <p>In time, gathering awesome feedback from our loyal customers, Kallyas became a mature, stable and future-proof project.</p>
                     </div>
-                    <div class="left_icons col-xl-1 col-lg-1 col-md-1 col-sm-3 col-3">
+                    <div class="left_icons col-xl-1 col-lg-1 col-md-1 col-sm-3 col-3 wow flip"   data-wow-duration="2s">
                         <i class="fas fa-trophy"></i>
                         <i class="fas fa-user-astronaut"></i>
                         <i class="fas fa-shopping-bag"></i>
                     </div>
-                    <div class="right_text col-xl-3 col-lg-3 col-md-5 col-sm-9 col-9">
+                    <div class="right_text col-xl-3 col-lg-3 col-md-5 col-sm-9 col-9 wow fadeInRight"   data-wow-duration="2s">
                         <span>Iconic Awarded Design</span>
                         <p>This design is featured across the marketplaces and awarded for it's looks. Walkthrough and enjoy the visuals.</p>
                         <span>Mature project</span>
@@ -253,6 +254,30 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="container9">
+            <h3>Facts</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="item col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 wow fadeInLeftBig"   data-wow-duration="2s">
+                        <span>130+</span>
+                        <p>Customers</p>
+                    </div>
+                    <div class="item col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 wow fadeInLeftBig"   data-wow-duration="2s">
+                        <span>200+</span>
+                        <p>Apps developed</p>
+                    </div>
+                    <div class="item col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 wow fadeInRightBig"   data-wow-duration="2s">
+                        <span>10+</span>
+                        <p>Offices</p>
+                    </div>
+                    <div class="item col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 wow fadeInRightBig"   data-wow-duration="2s">
+                        <span>2K+</span>
+                        <p>Coffes</p>
+                    </div>
+                </div>
+            </div>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         </section>
         <section class="container11">
             <div class="blok11">
@@ -273,7 +298,7 @@
                             <div>
                                 <a href="#"><i class="fab fa-facebook-square"></i></a>
                                 <a href="#"><i class="fab fa-twitter-square"></i></a>
-                                <a href="#"><i class="fas fa-headset"></i></a>
+                                <a href="#"><i class="fas fa-basketball-ball"></i></a>
                                 <a href="#"><i class="fab fa-invision"></i></a>
                             </div>
                         </div>
@@ -318,6 +343,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="./js/all.js"></script> 
+    <script src="./js/wow.min.js"></script>    
+              <script>
+              new WOW().init();
+              </script>
 </body>
 </html>
 
